--- a/style.css
+++ b/style.css
@@ -114,3 +114,63 @@ ul li a{
     font-weight: 600;
     font-size: 24px;
 }
+
+/* hero styles */
+.package-card{
+    border:1px solid #ddd;
+    border-radius: 8px;
+    overflow:hidden;
+    text-align: center;
+    padding:20px;
+    background-color: #fff;
+    transition: transform 0.3s;
+}
+
+.package-card img{
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.package-card h3{
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.package-card p{
+    color: #666;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.package-card .duration{
+    color: #FF0000;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.package-card .btn{
+    background-color: #007bff;
+    color: #fff;
+    padding:10px 20px;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.more-packages{
+    display: inline-block;
+    text-align: center;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 30px;
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+
+}
