--- a/style.css
+++ b/style.css
@@ -197,4 +197,19 @@ ul li a{
     }
 }
 
+/* north india tours styles*/
+.bd{
+    padding: 15px;
+}
 
+.bd img{
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.bd img:hover{
+    transform: scale(1.05);
+}
