--- a/style.css
+++ b/style.css
@@ -241,3 +241,28 @@ ul li a{
     display: inline-block;
     margin-top: 10px;
 }
+/* customer styles*/
+.testimonial-card{
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.testimonial-text{
+    font-style: italic;
+    color: #6c757d;
+}
+
+.customer-name{
+    margin-top:10px;
+    font-weight: bold;
+}
+
+.round-cricle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
