--- a/style.css
+++ b/style.css
@@ -266,3 +266,21 @@ ul li a{
   border-radius: 50%;
   object-fit: cover;
 }
+
+/* Footer and copyright styles (^_^) */
+footer h5{
+    font-weight: 600;
+}
+
+.social-icons{
+    font-size: 24px;
+    margin-right: 15px;
+}
+
+.quick{
+    list-style-type: none;
+}
+
+.quick a{
+    text-decoration: none;
+}
